fix: 🐛 z-index of messenger in combination with privacy banner

--- a/src/app/views/privacy/privacy.component.scss
+++ b/src/app/views/privacy/privacy.component.scss
@@ -1,5 +1,6 @@
 .v-privacy {
-  display: block;
-  margin-top: 40px;
-  margin-bottom: 40px;
+	display: block;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	z-index: 60;
 }
